--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
-REACT_APP_API_ENDPOINT=https://api.unsplash.com/photos
-REACT_APP_ACCESS_TOKEN=Client-ID XXXX-TOKEN HERE-XXXX
+REACT_APP_API_ENDPOINT=https://api.unsplash.com/search/photos
+REACT_APP_ACCESS_TOKEN=Client-ID XXXX-ACCESS_KEY-XXXX
